# pp

.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
cli/: README.md
dataset_eval_utils/src/liteparse_eval/: __init__.py  processing.py  report.py
examples/doc-classifier/: debug_chat_error.json  diagnose.ts  exhaustive_test.ts  list_models.ts  list_models_rest.ts  test_new_model.ts
examples/doc-classifier/test/: generate_pdf.js
lite-main/: .prettierignore  AGENTS.md  CONTRIBUTING.md  OCR_API_SPEC.md  README.md  SECURITY.md  package.json
lite-main/.changeset/: config.json
lite-main/.github/ISSUE_TEMPLATE/: bug_report.yml  parsing_issue.yml
lite-main/.github/workflows/: ci.yml  e2e-output.yml
lite-main/cli/: parse.ts
lite-main/dataset_eval_utils/: README.md  pyproject.toml
lite-main/examples/doc-classifier/: .gitignore  package-lock.json  package.json
lite-main/ocr/easyocr/: Dockerfile  server.py
lite-main/ocr/paddleocr/: Dockerfile  server.py
lite-main/scripts/: publish-to-homebrew-repo.sh
lite-main/src/conversion/: README.md  convertToPdf.ts
lite-main/src/core/: README.md  parser.ts
lite-main/src/output/: README.md  json.ts  text.ts
lite-main/src/processing/: ocrUtils.ts  textUtils.test.ts
ocr/easyocr/: pyproject.toml  test_server.py
ocr/paddleocr/: pyproject.toml  test_server.py
src/: index.ts  lib.ts
src/conversion/: convertToPdf.test.ts
src/core/: types.ts
src/engines/: README.md
src/engines/ocr/: README.md  http-simple.ts  interface.ts
src/processing/: README.md  bbox.ts  cleanText.ts  grid.ts  markupUtils.ts
(+48 files in other folders)
